[package]
authors = ["Mathias Hall-Andersen <mathias@hall-andersen.dk>"]
description = "A very simple crate to serialize rug integers as strings of bytes (for use in efficient binary serialization)"
edition = "2018"
exclude = [".github"]
license = "MIT"
name = "rug-binserial"
readme = "README.md"
repository = "https://github.com/rot256/rug-binserial"
version = "0.1.1"

[dependencies]
rug = "^1.11"
serde = {version = "^1.0", features = ["derive"]}

[dev-dependencies]
bincode = "1.3.1"
serde_json = "1.0.61"
